@@ -1,4 +1,4 @@
-$Id: changelog,v 1.52 2009/04/13 07:52:25 alfred Exp $
+$Id: changelog,v 1.53 2009/05/10 10:50:48 alfred Exp $
 ------------------------------------------------------------------------------
 v1.41r3 Aenderungen: (-->v1.41r4beta)
 
@@ -1163,3 +1163,9 @@ v1.41r8 Aenderungen: (-->v1.42beta)
 2009-04-13 [Bld68]
 
 - Bugfix      : correct SC/MP relative addressing regarding page wrap
+
+2009-05-10 [Bld69]
+
+- Bugfix      : allow more CPU aliases
+
+- Addition    : dispay macro nesting in listing
